# ZtPlayer

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/ztfun/ztplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default.json
app/src/main/java/com/ztfun/math/: Point3.java
app/src/main/java/com/ztfun/retrofit/akid/: IAkidService.java
app/src/main/java/com/ztfun/retrofit/cryptonator/: Crypto.java  Cryptonator.java  ICryptonatorService.java  IResultCallback.java
app/src/main/java/com/ztfun/ui/: ZtBaseActivity.java  ZtPlotView.java
app/src/main/java/com/ztfun/util/: AppCache.java  AssetsUtil.java  ByteUtils.java  DensityUtils.java  Log.java  Logz.java  ViewUtils.java
app/src/main/java/com/ztfun/ztplayer/: CameraActivity.java  MainActivity.java  ZtApp.java
app/src/main/jni/: CMakeLists.txt  build_library.sh  native-lib.cpp
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ztfun/ztplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
